Completely resolve selectors into expression resolution. Update tests to account for new method contracts.