@@ -13,14 +13,14 @@ import org.elasticsearch.action.support.IndicesOptions;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.IndexMetadata.State;
+import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver.ResolvedExpression;
 import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.indices.SystemIndices.SystemIndexAccessLevel;
 import org.elasticsearch.test.ESTestCase;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.EnumSet;
 import java.util.List;
 import java.util.function.Predicate;
 
@@ -50,50 +50,113 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             SystemIndexAccessLevel.NONE
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("testXXX"))),
-            equalTo(newHashSet("testXXX"))
-        );
-        assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Arrays.asList("testXXX", "testYYY"))),
-            equalTo(newHashSet("testXXX", "testYYY"))
-        );
-        assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Arrays.asList("testXXX", "ku*"))),
-            equalTo(newHashSet("testXXX", "kuku"))
-        );
-        assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("test*"))),
-            equalTo(newHashSet("testXXX", "testXYY", "testYYY"))
-        );
-        assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("testX*"))),
-            equalTo(newHashSet("testXXX", "testXYY"))
-        );
-        assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Arrays.asList("testX*", "kuku"))),
-            equalTo(newHashSet("testXXX", "testXYY", "kuku"))
-        );
-        assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("*"))),
-            equalTo(newHashSet("testXXX", "testXYY", "testYYY", "kuku"))
-        );
-        assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Arrays.asList("*", "-kuku"))),
-            equalTo(newHashSet("testXXX", "testXYY", "testYYY"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("testXXX", "data")))
+            ),
+            equalTo(newHashSet(new ResolvedExpression("testXXX", "data")))
         );
         assertThat(
             newHashSet(
                 IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                     context,
-                    Arrays.asList("testX*", "-doe", "-testXXX", "-testYYY")
+                    List.of(new ResolvedExpression("testXXX", "data"), new ResolvedExpression("testYYY", "data"))
                 )
             ),
-            equalTo(newHashSet("testXYY"))
+            equalTo(newHashSet(new ResolvedExpression("testXXX", "data"), new ResolvedExpression("testYYY", "data")))
+        );
+        assertThat(
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+                    context,
+                    List.of(new ResolvedExpression("testXXX", "data"), new ResolvedExpression("ku*", "data"))
+                )
+            ),
+            equalTo(newHashSet(new ResolvedExpression("testXXX", "data"), new ResolvedExpression("kuku", "data")))
+        );
+        assertThat(
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("test*", "data")))
+            ),
+            equalTo(
+                newHashSet(
+                    new ResolvedExpression("testXXX", "data"),
+                    new ResolvedExpression("testXYY", "data"),
+                    new ResolvedExpression("testYYY", "data")
+                )
+            )
+        );
+        assertThat(
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("testX*", "data")))
+            ),
+            equalTo(newHashSet(new ResolvedExpression("testXXX", "data"), new ResolvedExpression("testXYY", "data")))
+        );
+        assertThat(
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+                    context,
+                    List.of(new ResolvedExpression("testX*", "data"), new ResolvedExpression("kuku", "data"))
+                )
+            ),
+            equalTo(
+                newHashSet(
+                    new ResolvedExpression("testXXX", "data"),
+                    new ResolvedExpression("testXYY", "data"),
+                    new ResolvedExpression("kuku", "data")
+                )
+            )
+        );
+        assertThat(
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("*", "data")))
+            ),
+            equalTo(
+                newHashSet(
+                    new ResolvedExpression("testXXX", "data"),
+                    new ResolvedExpression("testXYY", "data"),
+                    new ResolvedExpression("testYYY", "data"),
+                    new ResolvedExpression("kuku", "data")
+                )
+            )
+        );
+        assertThat(
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+                    context,
+                    List.of(new ResolvedExpression("*", "data"), new ResolvedExpression("-kuku", "data"))
+                )
+            ),
+            equalTo(
+                newHashSet(
+                    new ResolvedExpression("testXXX", "data"),
+                    new ResolvedExpression("testXYY", "data"),
+                    new ResolvedExpression("testYYY", "data")
+                )
+            )
+        );
+        assertThat(
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+                    context,
+                    List.of(
+                        new ResolvedExpression("testX*", "data"),
+                        new ResolvedExpression("-doe", "data"),
+                        new ResolvedExpression("-testXXX", "data"),
+                        new ResolvedExpression("-testYYY", "data")
+                    )
+                )
+            ),
+            equalTo(newHashSet(new ResolvedExpression("testXYY", "data")))
         );
         if (indicesOptions == IndicesOptions.lenientExpandOpen()) {
             assertThat(
-                newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Arrays.asList("testXXX", "-testXXX"))),
-                equalTo(newHashSet("testXXX", "-testXXX"))
+                newHashSet(
+                    IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+                        context,
+                        List.of(new ResolvedExpression("testXXX", "data"), new ResolvedExpression("-testXXX", "data"))
+                    )
+                ),
+                equalTo(newHashSet(new ResolvedExpression("testXXX", "data"), new ResolvedExpression("-testXXX", "data")))
             );
         } else if (indicesOptions == IndicesOptions.strictExpandOpen()) {
             IndexNotFoundException infe = expectThrows(
@@ -103,8 +166,13 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             assertEquals("-testXXX", infe.getIndex().getName());
         }
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Arrays.asList("testXXX", "-testX*"))),
-            equalTo(newHashSet("testXXX"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+                    context,
+                    List.of(new ResolvedExpression("testXXX", "data"), new ResolvedExpression("-testX*", "data"))
+                )
+            ),
+            equalTo(newHashSet(new ResolvedExpression("testXXX", "data")))
         );
     }
 
@@ -122,24 +190,64 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             SystemIndexAccessLevel.NONE
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Arrays.asList("testYY*", "alias*"))),
-            equalTo(newHashSet("testXXX", "testXYY", "testYYY"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+                    context,
+                    List.of(new ResolvedExpression("testYY*", "data"), new ResolvedExpression("alias*", "data"))
+                )
+            ),
+            equalTo(
+                newHashSet(
+                    new ResolvedExpression("testXXX", "data"),
+                    new ResolvedExpression("testXYY", "data"),
+                    new ResolvedExpression("testYYY", "data")
+                )
+            )
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("-kuku"))),
-            equalTo(newHashSet("-kuku"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("-kuku", "data")))
+            ),
+            equalTo(newHashSet(new ResolvedExpression("-kuku", "data")))
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Arrays.asList("test*", "-testYYY"))),
-            equalTo(newHashSet("testXXX", "testXYY"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+                    context,
+                    List.of(new ResolvedExpression("test*", "data"), new ResolvedExpression("-testYYY", "data"))
+                )
+            ),
+            equalTo(newHashSet(new ResolvedExpression("testXXX", "data"), new ResolvedExpression("testXYY", "data")))
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Arrays.asList("testX*", "testYYY"))),
-            equalTo(newHashSet("testXXX", "testXYY", "testYYY"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+                    context,
+                    List.of(new ResolvedExpression("testX*", "data"), new ResolvedExpression("testYYY", "data"))
+                )
+            ),
+            equalTo(
+                newHashSet(
+                    new ResolvedExpression("testXXX", "data"),
+                    new ResolvedExpression("testXYY", "data"),
+                    new ResolvedExpression("testYYY", "data")
+                )
+            )
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Arrays.asList("testYYY", "testX*"))),
-            equalTo(newHashSet("testXXX", "testXYY", "testYYY"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+                    context,
+                    List.of(new ResolvedExpression("testYYY", "data"), new ResolvedExpression("testX*", "data"))
+                )
+            ),
+            equalTo(
+                newHashSet(
+                    new ResolvedExpression("testXXX", "data"),
+                    new ResolvedExpression("testXYY", "data"),
+                    new ResolvedExpression("testYYY", "data")
+                )
+            )
         );
     }
 
@@ -159,8 +267,16 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             SystemIndexAccessLevel.NONE
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("testX*"))),
-            equalTo(newHashSet("testXXX", "testXXY", "testXYY"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("testX*", "data")))
+            ),
+            equalTo(
+                newHashSet(
+                    new ResolvedExpression("testXXX", "data"),
+                    new ResolvedExpression("testXXY", "data"),
+                    new ResolvedExpression("testXYY", "data")
+                )
+            )
         );
         context = new IndexNameExpressionResolver.Context(
             state,
@@ -168,8 +284,10 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             SystemIndexAccessLevel.NONE
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("testX*"))),
-            equalTo(newHashSet("testXYY"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("testX*", "data")))
+            ),
+            equalTo(newHashSet(new ResolvedExpression("testXYY", "data")))
         );
         context = new IndexNameExpressionResolver.Context(
             state,
@@ -177,8 +295,10 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             SystemIndexAccessLevel.NONE
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("testX*"))),
-            equalTo(newHashSet("testXXX", "testXXY"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("testX*", "data")))
+            ),
+            equalTo(newHashSet(new ResolvedExpression("testXXX", "data"), new ResolvedExpression("testXXY", "data")))
         );
         context = new IndexNameExpressionResolver.Context(
             state,
@@ -217,28 +337,52 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             SystemIndexAccessLevel.NONE
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("test*X*"))),
-            equalTo(newHashSet("testXXX", "testXXY", "testXYY"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("test*X*", "data")))
+            ),
+            equalTo(
+                newHashSet(
+                    new ResolvedExpression("testXXX", "data"),
+                    new ResolvedExpression("testXXY", "data"),
+                    new ResolvedExpression("testXYY", "data")
+                )
+            )
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("test*X*Y"))),
-            equalTo(newHashSet("testXXY", "testXYY"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("test*X*Y", "data")))
+            ),
+            equalTo(newHashSet(new ResolvedExpression("testXXY", "data"), new ResolvedExpression("testXYY", "data")))
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("kuku*Y*"))),
-            equalTo(newHashSet("kukuYYY"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("kuku*Y*", "data")))
+            ),
+            equalTo(newHashSet(new ResolvedExpression("kukuYYY", "data")))
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("*Y*"))),
-            equalTo(newHashSet("testXXY", "testXYY", "testYYY", "kukuYYY"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("*Y*", "data")))
+            ),
+            equalTo(
+                newHashSet(
+                    new ResolvedExpression("testXXY", "data"),
+                    new ResolvedExpression("testXYY", "data"),
+                    new ResolvedExpression("testYYY", "data"),
+                    new ResolvedExpression("kukuYYY", "data")
+                )
+            )
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("test*Y*X")))
-                .size(),
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("test*Y*X", "data")))
+            ).size(),
             equalTo(0)
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, Collections.singletonList("*Y*X"))).size(),
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(new ResolvedExpression("*Y*X", "data")))
+            ).size(),
             equalTo(0)
         );
     }
@@ -256,8 +400,16 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             SystemIndexAccessLevel.NONE
         );
         assertThat(
-            newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolveAll(context)),
-            equalTo(newHashSet("testXXX", "testXYY", "testYYY"))
+            newHashSet(
+                IndexNameExpressionResolver.WildcardExpressionResolver.resolveAll(context, EnumSet.of(IndicesOptions.Selectors.DATA))
+            ),
+            equalTo(
+                newHashSet(
+                    new ResolvedExpression("testXXX", "data"),
+                    new ResolvedExpression("testXYY", "data"),
+                    new ResolvedExpression("testYYY", "data")
+                )
+            )
         );
         assertThat(
             newHashSet(IndexNameExpressionResolver.resolveExpressions(context, "_all")),
@@ -298,7 +450,12 @@ public class WildcardExpressionResolverTests extends ESTestCase {
                 IndicesOptions.lenientExpandOpen(), // don't include hidden
                 SystemIndexAccessLevel.NONE
             );
-            assertThat(newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolveAll(context)), equalTo(newHashSet()));
+            assertThat(
+                newHashSet(
+                    IndexNameExpressionResolver.WildcardExpressionResolver.resolveAll(context, EnumSet.of(IndicesOptions.Selectors.DATA))
+                ),
+                equalTo(newHashSet())
+            );
         }
 
         {
@@ -318,8 +475,10 @@ public class WildcardExpressionResolverTests extends ESTestCase {
                 SystemIndexAccessLevel.NONE
             );
             assertThat(
-                newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolveAll(context)),
-                equalTo(newHashSet("index-visible-alias"))
+                newHashSet(
+                    IndexNameExpressionResolver.WildcardExpressionResolver.resolveAll(context, EnumSet.of(IndicesOptions.Selectors.DATA))
+                ),
+                equalTo(newHashSet(new ResolvedExpression("index-visible-alias", "data")))
             );
         }
     }
@@ -361,8 +520,10 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             );
 
             assertThat(
-                newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolveAll(context)),
-                equalTo(newHashSet(DataStream.getDefaultBackingIndexName("foo_logs", 1, epochMillis)))
+                newHashSet(
+                    IndexNameExpressionResolver.WildcardExpressionResolver.resolveAll(context, EnumSet.of(IndicesOptions.Selectors.DATA))
+                ),
+                equalTo(newHashSet(new ResolvedExpression(DataStream.getDefaultBackingIndexName("foo_logs", 1, epochMillis), "data")))
             );
         }
 
@@ -385,7 +546,12 @@ public class WildcardExpressionResolverTests extends ESTestCase {
                 NONE
             );
 
-            assertThat(newHashSet(IndexNameExpressionResolver.WildcardExpressionResolver.resolveAll(context)), equalTo(newHashSet()));
+            assertThat(
+                newHashSet(
+                    IndexNameExpressionResolver.WildcardExpressionResolver.resolveAll(context, EnumSet.of(IndicesOptions.Selectors.DATA))
+                ),
+                equalTo(newHashSet())
+            );
         }
     }
 
@@ -506,16 +672,19 @@ public class WildcardExpressionResolverTests extends ESTestCase {
         );
 
         {
-            Collection<String> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            Collection<ResolvedExpression> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 indicesAndAliasesContext,
-                Collections.singletonList("foo_a*")
+                List.of(new ResolvedExpression("foo_a*", "data"))
             );
-            assertThat(indices, containsInAnyOrder("foo_index", "bar_index"));
+            assertThat(
+                indices,
+                containsInAnyOrder(new ResolvedExpression("foo_index", "data"), new ResolvedExpression("bar_index", "data"))
+            );
         }
         {
-            Collection<String> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            Collection<ResolvedExpression> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 skipAliasesLenientContext,
-                Collections.singletonList("foo_a*")
+                List.of(new ResolvedExpression("foo_a*", "data"))
             );
             assertEquals(0, indices.size());
         }
@@ -524,45 +693,52 @@ public class WildcardExpressionResolverTests extends ESTestCase {
                 IndexNotFoundException.class,
                 () -> IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                     skipAliasesStrictContext,
-                    Collections.singletonList("foo_a*")
+                    List.of(new ResolvedExpression("foo_a*", "data"))
                 )
             );
             assertEquals("foo_a*", infe.getIndex().getName());
         }
         {
-            Collection<String> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            Collection<ResolvedExpression> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 indicesAndAliasesContext,
-                Collections.singletonList("foo*")
+                List.of(new ResolvedExpression("foo*", "data"))
             );
-            assertThat(indices, containsInAnyOrder("foo_foo", "foo_index", "bar_index"));
+            assertThat(
+                indices,
+                containsInAnyOrder(
+                    new ResolvedExpression("foo_foo", "data"),
+                    new ResolvedExpression("foo_index", "data"),
+                    new ResolvedExpression("bar_index", "data")
+                )
+            );
         }
         {
-            Collection<String> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            Collection<ResolvedExpression> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 skipAliasesLenientContext,
-                Collections.singletonList("foo*")
+                List.of(new ResolvedExpression("foo*", "data"))
             );
-            assertThat(indices, containsInAnyOrder("foo_foo", "foo_index"));
+            assertThat(indices, containsInAnyOrder(new ResolvedExpression("foo_foo", "data"), new ResolvedExpression("foo_index", "data")));
         }
         {
-            Collection<String> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            Collection<ResolvedExpression> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 skipAliasesStrictContext,
-                Collections.singletonList("foo*")
+                List.of(new ResolvedExpression("foo*", "data"))
             );
-            assertThat(indices, containsInAnyOrder("foo_foo", "foo_index"));
+            assertThat(indices, containsInAnyOrder(new ResolvedExpression("foo_foo", "data"), new ResolvedExpression("foo_index", "data")));
         }
         {
-            Collection<String> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            Collection<ResolvedExpression> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 indicesAndAliasesContext,
-                Collections.singletonList("foo_alias")
+                List.of(new ResolvedExpression("foo_alias", "data"))
             );
-            assertThat(indices, containsInAnyOrder("foo_alias"));
+            assertThat(indices, containsInAnyOrder(new ResolvedExpression("foo_alias", "data")));
         }
         {
-            Collection<String> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            Collection<ResolvedExpression> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 skipAliasesLenientContext,
-                Collections.singletonList("foo_alias")
+                List.of(new ResolvedExpression("foo_alias", "data"))
             );
-            assertThat(indices, containsInAnyOrder("foo_alias"));
+            assertThat(indices, containsInAnyOrder(new ResolvedExpression("foo_alias", "data")));
         }
         {
             IllegalArgumentException iae = expectThrows(
@@ -581,11 +757,11 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             SystemIndexAccessLevel.NONE
         );
         {
-            Collection<String> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            Collection<ResolvedExpression> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 noExpandNoAliasesContext,
-                List.of("foo_alias")
+                List.of(new ResolvedExpression("foo_alias", "data"))
             );
-            assertThat(indices, containsInAnyOrder("foo_alias"));
+            assertThat(indices, containsInAnyOrder(new ResolvedExpression("foo_alias", "data")));
         }
         IndicesOptions strictNoExpandNoAliasesIndicesOptions = IndicesOptions.fromOptions(
             false,
@@ -654,18 +830,25 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             );
 
             // data streams are not included but expression matches the data stream
-            Collection<String> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            Collection<ResolvedExpression> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 indicesAndAliasesContext,
-                Collections.singletonList("foo_*")
+                List.of(new ResolvedExpression("foo_*", "data"))
             );
-            assertThat(indices, containsInAnyOrder("foo_index", "foo_foo", "bar_index"));
+            assertThat(
+                indices,
+                containsInAnyOrder(
+                    new ResolvedExpression("foo_index", "data"),
+                    new ResolvedExpression("foo_foo", "data"),
+                    new ResolvedExpression("bar_index", "data")
+                )
+            );
 
             // data streams are not included and expression doesn't match the data steram
             indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 indicesAndAliasesContext,
-                Collections.singletonList("bar_*")
+                List.of(new ResolvedExpression("bar_*", "data"))
             );
-            assertThat(indices, containsInAnyOrder("bar_bar", "bar_index"));
+            assertThat(indices, containsInAnyOrder(new ResolvedExpression("bar_bar", "data"), new ResolvedExpression("bar_index", "data")));
         }
 
         {
@@ -691,35 +874,35 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             );
 
             // data stream's corresponding backing indices are resolved
-            Collection<String> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            Collection<ResolvedExpression> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 indicesAliasesAndDataStreamsContext,
-                Collections.singletonList("foo_*")
+                List.of(new ResolvedExpression("foo_*", "data"))
             );
             assertThat(
                 indices,
                 containsInAnyOrder(
-                    "foo_index",
-                    "bar_index",
-                    "foo_foo",
-                    DataStream.getDefaultBackingIndexName("foo_logs", 1, epochMillis),
-                    DataStream.getDefaultBackingIndexName("foo_logs", 2, epochMillis)
+                    new ResolvedExpression("foo_index", "data"),
+                    new ResolvedExpression("bar_index", "data"),
+                    new ResolvedExpression("foo_foo", "data"),
+                    new ResolvedExpression(DataStream.getDefaultBackingIndexName("foo_logs", 1, epochMillis), "data"),
+                    new ResolvedExpression(DataStream.getDefaultBackingIndexName("foo_logs", 2, epochMillis), "data")
                 )
             );
 
             // include all wildcard adds the data stream's backing indices
             indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 indicesAliasesAndDataStreamsContext,
-                Collections.singletonList("*")
+                List.of(new ResolvedExpression("*", "data"))
             );
             assertThat(
                 indices,
                 containsInAnyOrder(
-                    "foo_index",
-                    "bar_index",
-                    "foo_foo",
-                    "bar_bar",
-                    DataStream.getDefaultBackingIndexName("foo_logs", 1, epochMillis),
-                    DataStream.getDefaultBackingIndexName("foo_logs", 2, epochMillis)
+                    new ResolvedExpression("foo_index", "data"),
+                    new ResolvedExpression("bar_index", "data"),
+                    new ResolvedExpression("foo_foo", "data"),
+                    new ResolvedExpression("bar_bar", "data"),
+                    new ResolvedExpression(DataStream.getDefaultBackingIndexName("foo_logs", 1, epochMillis), "data"),
+                    new ResolvedExpression(DataStream.getDefaultBackingIndexName("foo_logs", 2, epochMillis), "data")
                 )
             );
         }
@@ -748,35 +931,35 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             );
 
             // data stream's corresponding backing indices are resolved
-            Collection<String> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            Collection<ResolvedExpression> indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 indicesAliasesDataStreamsAndHiddenIndices,
-                Collections.singletonList("foo_*")
+                List.of(new ResolvedExpression("foo_*", "data"))
             );
             assertThat(
                 indices,
                 containsInAnyOrder(
-                    "foo_index",
-                    "bar_index",
-                    "foo_foo",
-                    DataStream.getDefaultBackingIndexName("foo_logs", 1, epochMillis),
-                    DataStream.getDefaultBackingIndexName("foo_logs", 2, epochMillis)
+                    new ResolvedExpression("foo_index", "data"),
+                    new ResolvedExpression("bar_index", "data"),
+                    new ResolvedExpression("foo_foo", "data"),
+                    new ResolvedExpression(DataStream.getDefaultBackingIndexName("foo_logs", 1, epochMillis), "data"),
+                    new ResolvedExpression(DataStream.getDefaultBackingIndexName("foo_logs", 2, epochMillis), "data")
                 )
             );
 
             // include all wildcard adds the data stream's backing indices
             indices = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
                 indicesAliasesDataStreamsAndHiddenIndices,
-                Collections.singletonList("*")
+                List.of(new ResolvedExpression("*", "data"))
             );
             assertThat(
                 indices,
                 containsInAnyOrder(
-                    "foo_index",
-                    "bar_index",
-                    "foo_foo",
-                    "bar_bar",
-                    DataStream.getDefaultBackingIndexName("foo_logs", 1, epochMillis),
-                    DataStream.getDefaultBackingIndexName("foo_logs", 2, epochMillis)
+                    new ResolvedExpression("foo_index", "data"),
+                    new ResolvedExpression("bar_index", "data"),
+                    new ResolvedExpression("foo_foo", "data"),
+                    new ResolvedExpression("bar_bar", "data"),
+                    new ResolvedExpression(DataStream.getDefaultBackingIndexName("foo_logs", 1, epochMillis), "data"),
+                    new ResolvedExpression(DataStream.getDefaultBackingIndexName("foo_logs", 2, epochMillis), "data")
                 )
             );
         }
@@ -808,16 +991,54 @@ public class WildcardExpressionResolverTests extends ESTestCase {
             SystemIndexAccessLevel.NONE
         );
 
-        Collection<String> matches = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(indicesAndAliasesContext, List.of("*"));
-        assertThat(matches, containsInAnyOrder("bar_bar", "foo_foo", "foo_index", "bar_index"));
-        matches = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(onlyIndicesContext, List.of("*"));
-        assertThat(matches, containsInAnyOrder("bar_bar", "foo_foo", "foo_index", "bar_index"));
-        matches = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(indicesAndAliasesContext, List.of("foo*"));
-        assertThat(matches, containsInAnyOrder("foo_foo", "foo_index", "bar_index"));
-        matches = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(onlyIndicesContext, List.of("foo*"));
-        assertThat(matches, containsInAnyOrder("foo_foo", "foo_index"));
-        matches = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(indicesAndAliasesContext, List.of("foo_alias"));
-        assertThat(matches, containsInAnyOrder("foo_alias"));
+        Collection<ResolvedExpression> matches = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            indicesAndAliasesContext,
+            List.of(new ResolvedExpression("*", "data"))
+        );
+        assertThat(
+            matches,
+            containsInAnyOrder(
+                new ResolvedExpression("bar_bar", "data"),
+                new ResolvedExpression("foo_foo", "data"),
+                new ResolvedExpression("foo_index", "data"),
+                new ResolvedExpression("bar_index", "data")
+            )
+        );
+        matches = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            onlyIndicesContext,
+            List.of(new ResolvedExpression("*", "data"))
+        );
+        assertThat(
+            matches,
+            containsInAnyOrder(
+                new ResolvedExpression("bar_bar", "data"),
+                new ResolvedExpression("foo_foo", "data"),
+                new ResolvedExpression("foo_index", "data"),
+                new ResolvedExpression("bar_index", "data")
+            )
+        );
+        matches = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            indicesAndAliasesContext,
+            List.of(new ResolvedExpression("foo*", "data"))
+        );
+        assertThat(
+            matches,
+            containsInAnyOrder(
+                new ResolvedExpression("foo_foo", "data"),
+                new ResolvedExpression("foo_index", "data"),
+                new ResolvedExpression("bar_index", "data")
+            )
+        );
+        matches = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            onlyIndicesContext,
+            List.of(new ResolvedExpression("foo*", "data"))
+        );
+        assertThat(matches, containsInAnyOrder(new ResolvedExpression("foo_foo", "data"), new ResolvedExpression("foo_index", "data")));
+        matches = IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+            indicesAndAliasesContext,
+            List.of(new ResolvedExpression("foo_alias", "data"))
+        );
+        assertThat(matches, containsInAnyOrder(new ResolvedExpression("foo_alias", "data")));
         IllegalArgumentException iae = expectThrows(
             IllegalArgumentException.class,
             () -> IndexNameExpressionResolver.resolveExpressions(onlyIndicesContext, "foo_alias")
@@ -840,7 +1061,10 @@ public class WildcardExpressionResolverTests extends ESTestCase {
     private static void assertWildcardResolvesToEmpty(IndexNameExpressionResolver.Context context, String wildcardExpression) {
         IndexNotFoundException infe = expectThrows(
             IndexNotFoundException.class,
-            () -> IndexNameExpressionResolver.WildcardExpressionResolver.resolve(context, List.of(wildcardExpression))
+            () -> IndexNameExpressionResolver.WildcardExpressionResolver.resolve(
+                context,
+                List.of(new ResolvedExpression(wildcardExpression, "data"))
+            )
         );
         assertEquals(wildcardExpression, infe.getIndex().getName());
     }
